--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@babel/cli": "^7.2.3",
     "@babel/core": "^7.3.4",
     "@babel/node": "^7.2.2",
+    "@babel/plugin-proposal-class-properties": "^7.3.4",
     "@babel/preset-env": "^7.3.4",
     "nodemon": "^1.18.10",
     "rimraf": "^2.6.3"
