--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express": "^4.16.4",
     "firebase": "^5.8.5",
     "firebase-admin": "^7.0.0",
+    "google-spreadsheet": "^2.0.7",
     "jsonwebtoken": "^8.5.0",
     "morgan": "^1.9.1",
     "puppeteer": "^1.13.0"
